# Laser-SLAM-Course

./: README.md
第10章-迭代内容/: README.md
第11章-大作业/: README.md
第11章-大作业/graph_slam/: CMakeLists.txt  package.xml
第11章-大作业/graph_slam/include/: edge_se2.hpp  graph_slam.hpp  keyframe.hpp  keyframe_updater.hpp  loop_detector.hpp  ros_utils.hpp  se2.h  vertex_se2.hpp
第11章-大作业/graph_slam/src/: back_end.cpp  front_end.cpp  gaussian_newton_method.cpp  keyframe.cpp
第1章-激光SLAM简介/: README.md
第1章-激光SLAM简介/basicTransformStudy/: basic_transform_study.cpp
第2章-里程计运动模型和标定/: README.md
第2章-里程计运动模型和标定/odom_calib/: odom_calib  odom_calib.cpp
第2章-里程计运动模型和标定/odom_ws/src/calib_odom/src/: Odom_Calib.cpp  main.cpp
第3章-激光雷达数学模型和运动畸变去除/: README.md
第3章-激光雷达数学模型和运动畸变去除/LaserUndistortion_ws/src/LaserUndistortion/src/: LidarMotionUndistortion.cpp
第4章-激光SLAM前端配准方法一/: README.md
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/champion_nav_msgs/: install.sh
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/champion_nav_msgs/devel/: .catkin  .rosinstall
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/champion_nav_msgs/devel/lib/pkgconfig/: champion_nav_msgs.pc
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/champion_nav_msgs/devel/lib/python2.7/dist-packages/champion_nav_msgs/msg/: _ChampionNavLaserScan.py
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/champion_nav_msgs/devel/share/champion_nav_msgs/cmake/: champion_nav_msgs-msg-extras.cmake  champion_nav_msgs-msg-paths.cmake  champion_nav_msgsConfig.cmake
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/champion_nav_msgs/devel/share/roseus/ros/champion_nav_msgs/: manifest.l
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/imlsMatcher/: CMakeLists.txt
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/imlsMatcher/include/imlsMatcher/: imls_icp.h
第4章-激光SLAM前端配准方法一/imlsMatcherProject/src/imlsMatcher/src/: imls_icp.cpp  main.cpp  main_test.cpp
第5章-激光SLAM前端配准方法二/: README.md
第5章-激光SLAM前端配准方法二/gaussian_newton_ws/src/gaussian_newton_scanmatcher/src/: gaussian_newton_method.cpp
第6章-基于图优化的激光SLAM方法/: README.md
第6章-基于图优化的激光SLAM方法/LSSLAMProject/src/ls_slam/include/ls_slam/: angle_local_parameterization.h  gaussian_newton.h  normalize_angle.h  pose_graph_2d_error_term.h  readfile.h
第6章-基于图优化的激光SLAM方法/LSSLAMProject/src/ls_slam/src/: gaussian_newton.cpp  main.cpp  readfile.cpp
第7章-基于已知定位的建图方法/: README.md
第7章-基于已知定位的建图方法/OccupanyMappingProject/src/occupany_mapping/src/: occupany_mapping.cpp
第8章-Life-long-Mapping/: README.md
第9章-3D激光SLAM介绍/: README.md
